<?xml version="1.0" encoding="utf-8"?>
<!-- String resources for the BBQ Timer application. -->
<resources>

    <!-- Inform the user that the system Alarm volume is muted, and thus they won't be able to hear
      the app's alarms. This wording comes right out of the Clock app. -->
    <string name="alarm_muted">Alarm volume muted</string>

    <!-- The "unmute" action (hence all upper-case) for the alarm_muted Snackbar. -->
    <string name="alarm_unmute">UNMUTE</string>

    <!-- The application's name. -->
    <string name="app_name">BBQ Timer</string>

    <!-- The application's description. This goes into the AndroidManifest. -->
    <string name="app_description">A stopwatch and interval timer that you can use on the lock-screen.</string>

    <!-- Name for the Alarm notification channel. Recommended maximum 40 chars. -->
    <string name="notification_alarm_channel_name">Alarm</string>

    <!-- The settings needed for the app's Alarm notification channel to work.
     This should match the strings in the Android version's Settings UI.
     API 27: Urgent to hear + pop-on-screen alerts; High to hear.
     This string is specialized by language and Android API version to match their Settings.
       -->
    <string name="notification_alarm_channel_description">Importance must be High or higher to hear alarms; Medium or higher to see on lock screen</string>

    <!-- Inform the user that the app's notifications are disabled, and thus they won't be able to
      hear or see the app's alarms. -->
    <string name="notifications_disabled">Notifications are disabled</string>

    <!-- Inform the user why the app needs permission to show Notifications. -->
    <string name="notifications_permission_needed">BBQ Timer needs Notifications for alarm sounds, lock screen controls, and pull-down controls</string>

    <!-- The "enable" action (hence all upper-case) for the notifications_disabled Snackbar. -->
    <string name="notifications_enable">ENABLE</string>

    <!-- Contents of a Snackbar to inform the user that the app's Alarm notification channel is set
      so it won't be audible and/or visible, making for unexpectedly bad behavior that users will
      find hard to debug. The relevant Settings app settings vary between Android versions.
      The version- and language-specific specializations of the
      notification_alarm_channel_description string aim to match those settings, while this string
      just aims to summarize it in the space of a Snackbar.
      -->
    <string name="notifications_misconfigured">The Alarm channel must be on and not silent to hear alarms</string>

    <!-- The "configure" Snackbar action (hence all upper-case) for the notifications_misconfigured. -->
    <string name="notifications_configure">CONFIGURE</string>

    <!-- Label for the notification button that resets the timer to be stopped at 00:00,
       ALSO for the recipe editor button that resets the recipe list. -->
    <string name="reset">Reset</string>

    <!-- Label for the notification button that runs (i.e. starts or resumes) the stopped timer. -->
    <string name="start">Run</string>

    <!-- App shortcut that Starts the timer running at 00:00. The long label appears in the
       menu of app shortcuts, which is "limited to about 25 characters." Call this "Start" or
       "Start at 00:00". -->
    <string name="start_at_0_long">Start</string>
    <!-- App shortcut that Resets the timer to 00:00 then Starts it Running. This short label is used in
       places like pinned shortcut icons. It's "limited to about 10 characters." -->
    <string name="start_at_0_short">Start</string>

    <!-- Label for the notification button that pauses the running timer. This doesn't reset the timer nor hide
      its notification. -->
    <string name="pause">Pause</string>

    <!-- App shortcut that puts the timer in the Paused at 00:00 state. The long label appears in the
       menu of app shortcuts, which is "limited to about 25 characters." Call this "Pause at 00:00",
       "Pause", "Reset + Pause", or what? -->
    <string name="pause_at_0_long">Pause at 00:00</string>
    <!-- App shortcut that puts the timer in the Paused at 00:00 state. The short label is used in
       places like pinned shortcut icons. It's "limited to about 10 characters." -->
    <string name="pause_at_0_short">Pause 00:00</string>

    <!-- Label for the activity and notification button that stops and resets the timer and hides its notification. -->
    <string name="stop">Stop</string>

    <!-- Label for the activity and widget button that runs (i.e. starts or resumes) a timer or else pauses a running timer.
        In German user interfaces for timers and stopwatches, "Start" is the standard term used to begin or resume the timer. -->
    <string name="start_pause">Run/Pause</string>

    <!-- The checkbox that turns periodic reminder interval alarms on/off; this checkbox ALSO acts
      as the label for the adjacent text field used to enter the interval time period. -->
    <string name="reminder_switch">Periodic alarm interval:</string>

    <!-- The "hint" to explain the meaning and format of what to type into the interval time period
      text field. This hint conveys that the user can type in one, two, or three ":"-separated
      numbers meaning minutes (like "5" or "30"), or minutes and seconds (like "5:05", "5:5",
      "0:30", or ":30"), or hours and minutes and seconds (like "2:05:00" or "2:5:").
      This hint must be very short, preferably 13 characters. -->
    <string name="interval_hint">m, m:s, h:m:s</string>

    <!-- Notification body message: The interval time (parameter 1$) between reminder alarms.
      "%1$s" is placeholder #1 for the number of hours:minutes:seconds or minutes:seconds.
      Examples: "Alarm every 00:30", "Alarm every 05:30", and "Alarm every 2:10:30".
      This needs to be very short to fit in one line in a pull-down notification, esp. on narrow
      screens and screens with the Font or Display Size turned up by the user.
      This could be in command form, meaning "Sound an alarm every...", or a noun phrase, meaning
      "(There will be an) alarm every...". -->
    <string name="notification_body">Every %1$s</string>

    <!-- Notification body message: The timer is running with no reminder alarms. This message must
       be short enough to fit in one line of the notification drawer area. -->
    <string name="timer_running">Running</string>

    <!-- Notification body message for Wear OS: The timer is running at {elapsed_time} and counting.
       [Evaluating ">1:30", "≥1:30", and "1:30➚︎".] -->
    <string name="running_up_at">Running &gt;%1$s</string>

    <!-- Notification body message: The timer is paused. -->
    <string name="timer_paused">Paused</string>

    <!-- Notification body message for Wear OS: The timer is paused at {elapsed_time}.
       This message must be short enough to fit in one line of the notification shade.

       "%1$s" is placeholder #1 for the timer's string value such as "10:23" ("s" for string).

       The arrows convey that the time value gets stale. The emoji makes it more glanceable.

       NOTE: The <elapsed_time> is the accumulated timer duration, not the time of day when the
       pause occurred. In English, "Paused at 10:23" is ambiguous. -->
    <string name="timer_paused_at">Paused %1$s</string>

    <!-- Notification body message for Wear OS: The next alarm is in {time} and counting down.
       [Evaluating "<1:30", "≤1:30", and "1:30➘".] -->
    <string name="counting_down_at">Next ♫ in &lt;%1$s</string>

    <!-- Notification body message for Wear OS: The next alarm is in {time}. -->
    <string name="count_down_at">Next ♫ in %1$s</string>

    <!-- Notification body message: The timer is stopped. This message must be short enough to fit
       in one line of the notification drawer area. -->
    <string name="timer_stopped">Stopped</string>

    <!-- Notification body subtext (third line): Indicates that periodic reminder alarms are turned
      off. This message must be short enough to fit in one line of the notification drawer area. -->
    <string name="no_reminders_tip">No periodic alarms</string>

    <!-- The initial text for a reset timer showing 0 minutes and 0.0 seconds. This should match the
      locale's format used by the Android OS utility DateUtils.formatElapsedTime() with appended
      tenths of a second, BUT it doesn't matter since it gets replaced immediately with a
      string computed by formatting the timer duration value 0. See time_format.

      The Android OS standard format is "00:00" in English even though "0:00" would look better. -->
    <string name="time0">00:00.0</string>

    <!-- The chronometer time value to show in the widget preview. -->
    <string name="widget_preview_time">07:00</string>

    <!-- The countdown chronometer time value to show in the widget preview. -->
    <string name="widget_preview_countdown">00:30</string>

    <!-- Toast message explaining how to fix the app's Alarm access on Android 12+.
      The quoted strings refer to labels in the Android Settings app.
      This message includes the app name since the toast can appear over another app.
      Space is tight in a toast; this might not fit. -->
    <string name="need_alarm_access">BBQ Timer needs “Special app access” “Alarms &amp; reminders” to set alarms</string>

    <!-- The initial "recipes" of alarm intervals with optional notes.
         The placeholder %1$s is for fish fillets temperature-done in either °C or °F.
         The placeholder %2$s is for burgers temperature-done in either °C or °F. -->
    <string name="recipes">6 thin fish fillets, cook to %1$s\n7 burgers, cook to %2$s\n:30\n1\n1:30\n2\n3\n4\n5\n6\n7\n8\n9\n10\n15\n1:30:00</string>

    <!-- Content description for the icon button that opens the menu of alarm intervals. -->
    <string name="intervals_menu">Intervals menu</string>

    <!-- Menu command to edit the pop-up list of "recipes" of alarm intervals with optional notes. -->
    <string name="edit_this_list">Edit these intervals…</string>

    <!-- Title for the dialog to edit "recipes" of alarm intervals with optional notes. -->
    <string name="edit_list_title">Alarm intervals</string>

    <!-- Hint for what to type into the recipe editor. -->
    <string name="edit_list_hint">m, m:s, or h:m:s with optional notes</string>

    <!-- "Save edits" button in the recipe editor. -->
    <string name="save_edits">Save</string>

    <!-- "Cancel edits" button in the recipe editor. -->
    <string name="cancel_edits">Cancel</string>

    <!-- ActionBar's "Device is locked" menu item.
      The menu item has showAsAction="always", i.e. always display as an icon in the app bar.
      Long-pressing the item shows this item name string in a popup hint. It might also appear to a
      screen reader. -->
    <string name="action_locked">Device is locked</string>
</resources>
