<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MergeRootFrame"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.onefishtwo.bbqtimer.MainActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        tools:ignore="UselessParent,RtlHardcoded"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="@dimen/display_text_view_adjusted_height"
            android:layout_gravity="right"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:gravity="right|bottom"
            android:maxLines="1"
            android:text="@string/time0"
            android:textColor="@color/running_timer_colors"
            android:textSize="@dimen/display_text_size"
            android:typeface="sans"
            tools:ignore="SpUsage,Deprecated"/>

        <LinearLayout
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center_vertical|right"
            android:background="@color/grayer">

            <Button
                android:id="@+id/startStopButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/start_pause"
                android:drawableLeft="@drawable/ic_play"
                android:focusable="true"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding" />

            <Button
                android:id="@+id/resetButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/reset"
                android:drawableLeft="@drawable/ic_replay"
                android:focusable="true"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding" />

            <Button
                android:id="@+id/stopButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:contentDescription="@string/stop"
                android:drawableLeft="@drawable/ic_stop"
                android:focusable="true"
                android:nextFocusForward="@+id/enableReminders"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/controls_top_margin"
            android:layout_gravity="right">

            <CheckBox
                android:id="@+id/enableReminders"
                android:layout_width="wrap_content"
                android:maxWidth="@dimen/max_checkbox_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:text="@string/reminder_switch"
                android:textSize="@dimen/controls_text_size"
                android:layout_weight="6"
                android:layout_margin="@dimen/widget_margin"
                android:paddingTop="@dimen/small_button_padding"
                android:paddingBottom="@dimen/small_button_padding"
                android:focusable="true"/>

            <NumberPicker
                android:id="@+id/minutesPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="0"
                android:focusable="true"/>
        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
