<?xml version="1.0" encoding="utf-8"?>
<!-- This layout is used in RemoteViews so it can't reliably access theme attributes `?attr/`.
     The negative margins squeeze it a little so the heads-up notification
     doesn't clip the Pause & Play action buttons. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-2sp"
    android:layout_marginTop="-2sp"
    android:orientation="vertical"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="2dp">

        <!-- ALARM COUNTDOWN SECTION -->
        <ImageView
            android:id="@+id/alarmIcon"
            android:layout_width="@dimen/notification_icon_size"
            android:layout_height="@dimen/notification_icon_size"
            android:src="@drawable/ic_bell"
            android:tint="@color/notification_text"
            android:layout_marginEnd="@dimen/notification_icon_spacer"
            tools:ignore="UseAppTint"
            android:contentDescription="@null" />

        <!-- Notifier.java relies on the child views being #0 (Chronometer) and #1 (TextView) in
             both of these ViewFlippers. -->
        <ViewFlipper
            android:id="@+id/countdownViewFlipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/notification_chronometer_spacer"
            android:layout_gravity="center_vertical"
            android:measureAllChildren="false">

            <Chronometer
                android:id="@+id/countdownChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:countDown="true"
                android:ellipsize="end"
                android:gravity="bottom|left"
                android:layout_gravity="bottom|left"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/notification_text"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/pausedCountdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="bottom|left"
                android:layout_gravity="bottom|left"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/notification_text"
                android:textStyle="bold"
                android:typeface="sans" />
        </ViewFlipper>

        <!-- ELAPSED TIME SECTION -->
        <ImageView
            android:layout_width="@dimen/notification_icon_size"
            android:layout_height="@dimen/notification_icon_size"
            android:src="@drawable/ic_clock"
            android:tint="@color/notification_text"
            android:layout_marginEnd="@dimen/notification_icon_spacer"
            tools:ignore="UseAppTint"
            android:contentDescription="@null" />

        <!-- Notifier.java relies on the child views being #0 (Chronometer) and #1 (TextView) in
             both of these ViewFlippers. -->
        <ViewFlipper
            android:id="@+id/countUpViewFlipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:measureAllChildren="false">

            <Chronometer
                android:id="@+id/countUpChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="bottom|left"
                android:layout_gravity="bottom|left"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/notification_text"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/pausedCountUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="bottom|left"
                android:layout_gravity="bottom|left"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/notification_text"
                android:textStyle="bold"
                android:typeface="sans" />
        </ViewFlipper>

        <!-- TIMER STATE SECTION -->
        <TextView
            android:id="@+id/timerStateMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/notification_chronometer_spacer"
            android:ellipsize="end"
            android:hyphenationFrequency="full"
            android:maxLines="1"
            android:text="@string/timer_running"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/notification_text" />

    </LinearLayout>

    <!-- ACTION BUTTONS SECTION -->
    <LinearLayout
        android:id="@+id/actionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <ImageButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/notification_button_spacer"
            android:src="@drawable/ic_action_play"
            android:contentDescription="@string/start"
            android:background="@drawable/notification_button_background"
            android:scaleType="centerInside"
            android:tint="@color/notification_action_tint"
            tools:ignore="UseAppTint" />

        <ImageButton
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/notification_button_spacer"
            android:src="@drawable/ic_action_pause"
            android:contentDescription="@string/pause"
            android:background="@drawable/notification_button_background"
            android:scaleType="centerInside"
            android:tint="@color/notification_action_tint"
            tools:ignore="UseAppTint" />

        <ImageButton
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/notification_button_spacer"
            android:src="@drawable/ic_action_stop"
            android:contentDescription="@string/stop"
            android:background="@drawable/notification_button_background"
            android:scaleType="centerInside"
            android:tint="@color/notification_action_tint"
            tools:ignore="UseAppTint" />

        <ImageButton
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/notification_button_spacer"
            android:src="@drawable/ic_action_replay"
            android:contentDescription="@string/reset"
            android:background="@drawable/notification_button_background"
            android:scaleType="centerInside"
            android:tint="@color/notification_action_tint"
            tools:ignore="UseAppTint" />

    </LinearLayout>
</LinearLayout>
